# manywidgets-playground

./: .env.example  .gitignore  README.md  index.md  justfile  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
notebooks/: dashboard.ipynb  lonboard-map.ipynb  monty_earthquakes.ipynb  monty_floods.ipynb  welcome.ipynb
scripts/: new_notebook.py
templates/: _starter.ipynb
